--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
         run: |
           pip install poetry
           poetry install
+          pip install "django~=${{ matrix.django-version }}.0"
       - name: Run the testsuite
         run: |
           source $(poetry env info --path)/bin/activate
