--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,10 @@ latest-tag = true
 requires = ["poetry-core>=1.0.0", " poetry-dynamic-versioning"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.black]
+line-length = 88
+exclude = "/migrations/"
+
 [tool.pylint.messages_control]
 disable = "C,W5103"
 
