--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,22 @@
-[tool.poetry]
+[project]
 name = "django-bootstrap-app"
-version = "0.0.1"
+version = {use_scm = true}
 description = "An boilerplate / bootstrap installation of a Django app"
-authors = ["Martijn Jacobs <maerteijn@gmail.com>"]
-license = "MIT"
+authors = [
+    {name = "Martijn Jacobs", email = "maerteijn@gmail.com"},
+]
+dependencies = [
+    "django~=3.1.0",
+]
+requires-python = ">=3.7"
+dynamic = ["version", "classifiers"]
+license = {text = "MIT"}
 readme = "README.md"
-repository = "https://github.com/maerteijn/django-bootstrap-app"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Web Environment",
     "Framework :: Django",
+    "Framework :: Django :: 3.1",
     "Framework :: Django :: 3.2",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
@@ -18,40 +25,42 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9"
 ]
-packages = [
-    { include = "django_bootstrap_app", from = "src" },
+
+[project.urls]
+homepage = "https://github.com/maerteijn/django-bootstrap-app"
+repository = "https://github.com/maerteijn/django-bootstrap-app"
+
+[tool.pdm]
+includes = ["src/django_bootstrap_app"]
+package-dir = "src"
+
+[tool.pdm.scripts]
+flake8 = "flake8 ."
+pylint = "pylint src/"
+pytest = "pytest"
+black = "black src/"
+isort = "isort ."
+manage.py = "sandbox/manage.py"
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "flake8~=3.8",
+    "flake8-black<1.0.0,>=0.2.1",
+    "flake8-isort==4.0",
+    "pylint~=2.8",
+    "pytest~=6.2",
+    "pytest-django~=4.4",
+    "pytest-cov~=2.11",
+    "pytest-env~=0.6",
+    "pytest-pythonpath~=0.7",
 ]
-
-[tool.poetry.dependencies]
-python = "^3.7"
-Django = "3.2"
-
-[tool.poetry.dev-dependencies]
-flake8 = "~3.8"
-flake8-black = "^0.2.1"
-flake8-isort =  "4.0"
-pylint = "~2.8"
-black = "-21.6b0"
-pytest = "~^6.2"
-pytest-django = "~4.4"
-pytest-cov = "~2.11"
-pytest-env = "^0.6.2"
-poetry-dynamic-versioning = "^0.13"
-pytest-pythonpath = "^0.7.3"
-
-[tool.poetry-dynamic-versioning]
-enable = true
-metadata = true
-tagged-metadata = true
-latest-tag = true
-
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-pep517"]
+build-backend = "pdm.pep517.api"
 
 [tool.black]
 line-length = 88
-exclude = "/migrations/"
+exclude = "/migrations/|/__pypackages__/"
 
 [tool.pylint.messages_control]
 disable = "C,W5103"
@@ -77,7 +86,7 @@ addopts = "--reuse-db --cov=django_bootstrap_app"
 python_paths = "sandbox"
 
 [tool.coverage.run]
-omit = ["**/migrations/**", "**/tests/**", "sandbox/**"]
+omit = ["**/migrations/**", "**/tests/**", "sandbox/**", "__pypackages__/**"]
 
 [tool.coverage.report]
 show_missing = true
