--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,17 +27,16 @@ python = "^3.7"
 Django = "3.2"
 
 [tool.poetry.dev-dependencies]
-flake8 = "~3.8"
-flake8-black = "^0.2.1"
-flake8-isort =  "4.0"
-pylint = "~2.8"
-black = "-21.6b0"
-pytest = "~^6.2"
-pytest-django = "~4.4"
-pytest-cov = "~2.11"
+flake8 = "~4.0"
+flake8-black = "^0.2.4"
+flake8-isort =  "~4.1"
+pylint = "~2.12"
+black = "~22"
+pytest = "~7"
+pytest-django = "~4.5"
+pytest-cov = "~3.0"
 pytest-env = "^0.6.2"
-poetry-dynamic-versioning = "^0.13"
-pytest-pythonpath = "^0.7.3"
+poetry-dynamic-versioning = "^0.13.1"
 
 [tool.poetry-dynamic-versioning]
 enable = true
@@ -71,10 +70,11 @@ multi_line_output = 3
 use_parentheses = true
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "sandbox.settings"
+pythonpath = "sandbox"
+DJANGO_SETTINGS_MODULE = "settings"
 testpaths = "tests/"
-addopts = "--reuse-db --cov=django_bootstrap_app"
-python_paths = "sandbox"
+addopts = "--reuse-db --import-mode prepend --cov=django_bootstrap_app"
+
 
 [tool.coverage.run]
 omit = ["**/migrations/**", "**/tests/**", "sandbox/**"]
