--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pytest-django = "~4.5"
 pytest-cov = "~3.0"
 pytest-env = "^0.6.2"
 poetry-dynamic-versioning = "^0.13.1"
+flake8-pylint = "^0.1.3"
 
 [tool.poetry-dynamic-versioning]
 enable = true
