--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        django-version: [3.1, 3.2]
+        python-version: [3.9, 3.10]
+        django-version: [3.2]
     steps:
       - name: Download src dir
         uses: actions/download-artifact@v2
