--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-Django = "3.2"
+Django = "~3.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "~4.0"
